log
Fri Mar 27 05:35:00 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
5f5bf04
Fri Mar 27 05:45:29 PM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:79:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   79 |     Nodo* nuevoNodo = createNode(data);
      |     ^~~~
      |     Node
list.c:79:23: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   79 |     Nodo* nuevoNodo = createNode(data);
      |                       ^~~~~~~~~~
list.c:80:14: error: request for member ‘next’ in something not a structure or union
   80 |     nuevoNodo->next = list->current->next;
      |              ^~
list.c:81:25: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
   81 |     list->current->next = nuevoNodo;
      |                         ^
list.c:82:14: error: request for member ‘next’ in something not a structure or union
   82 |     nuevoNodo->next->prev = nuevoNodo;
      |              ^~
list.c:83:14: error: request for member ‘prev’ in something not a structure or union
   83 |     nuevoNodo->prev = list->current;
      |              ^~
0ca0673
Fri Mar 27 05:46:10 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0ca0673
Fri Mar 27 05:55:46 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
54b27d8
Fri Mar 27 06:00:36 PM UTC 2026: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:18: error: expected expression before ‘List’
   39 |     nuevaLista = List* malloc(List);
      |                  ^~~~
list.c: In function ‘pushCurrent’:
list.c:85:11: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   85 |     Node* nuevoNodo = createNode(data);
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
8e01464
Fri Mar 27 06:01:20 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:37: error: expected expression before ‘List’
   38 |     List* nuevaLista=(List*) malloc(List);
      |                                     ^~~~
list.c: In function ‘pushCurrent’:
list.c:84:11: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   84 |     Node* nuevoNodo = createNode(data);
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
5ac7570
Fri Mar 27 06:01:44 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:33: error: expected expression before ‘List’
   39 |     nuevaLista = (List*) malloc(List);
      |                                 ^~~~
list.c: In function ‘pushCurrent’:
list.c:85:11: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   85 |     Node* nuevoNodo = createNode(data);
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
4880cab
Fri Mar 27 06:01:57 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:85:11: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   85 |     Node* nuevoNodo = createNode(data);
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
a0eb5f7
